<resources>
    <string name="app_name">Halloween Control Panel</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="devices">Devices</string>
    <string name="lanternPinDesc">This is the pin value that controls the lantern light.</string>
    <string name="lanternMinBrightnessDesc">This is the minimum brightness that the lantern can be set to. NOTE: Due to how the heuristics on the light work, a lower min brightness will cause the light to dim quicker. (Default: 0)</string>
    <string name="lanternMaxBrightnessDesc">This is the maximum brightness that the lantern can be set to. NOTE: Any value about ~550 appears to have no noticeable difference with regards to brightness. (Default: 150)</string>
    <string name="lanternSmoothingDesc">This value controls how smoothly the light ramps up and down. Higher values will make the light level ramp faster. (Default: 1)</string>
    <string name="lanternFlickerRateDesc">This value controls the delay in between each ramp interval. NOTE: A higher value will produce a slower flicker. (Default: 1000)</string>
    <string name="lanternDropDelayDesc">This value controls the time in between dropping from the highest value to the minimum value for any given flicker interval. (Default: 1000)</string>
    <string name="lanternDropValueDesc">This value controls how much the light level drops after hitting the max value for any given flicker interval. A higher value will increased the perceived \"flicker\" for that given interval. (Default: 1)</string>
    <string name="device_details">Device Details</string>
    <string name="lantern_details">Lantern Controls</string>
    <string name="lanternNameDesc">This is the name of the lantern. Give it a unique name so that you can differentiate it from the rest!</string>
    <string name="name">Name:</string>
    <string name="name_help">Name Help</string>
    <string name="pin_help">Pin Help</string>
    <string name="min_brightness">Min Brightness</string>
    <string name="max_brightness_help">Max Brightness Help</string>
    <string name="drop_delay_help">Drop Delay Help</string>
    <string name="drop_value_help">Drop Value Help</string>
    <string name="flicker_rate_help">Flicker Rate Help</string>
    <string name="smoothing_value_help">Smoothing Value Help</string>
    <string name="update">Update</string>
    <string name="smoothing_value">Smoothing Value:</string>
    <string name="ramp_delay_microseconds">Ramp Delay (microseconds):</string>
    <string name="drop_delay_microseconds">Drop Delay:</string>
    <string name="drop_value">Drop Value:</string>
    <string name="max_brightness">Max Brightness:</string>
    <string name="min_brightness_label">Min Brightness:</string>
    <string name="pin_label">Pin #:</string>
    <string name="help_title">Variable Description</string>
    <string name="dismiss">Dismiss</string>
    <string name="precision_mode">Precision Mode</string>
    <string name="slider_mode">Slider Mode</string>
    <string name="lanternFlickerDelayMinDesc">This value controls the minimum delay time between flicker cycles after having ramped down to the minimum. (Default: 10)</string>
    <string name="lanternFlickerDelayMaxDesc">This value controls the maximum delay time between flicker cycles after having ramped down to the minimum. (Default: 10)</string>
    <string name="min_flicker_delay_ms">Min Flicker Delay (ms):</string>
    <string name="max_flicker_delay_ms">Max Flicker Delay (ms):</string>
    <string name="spider_drop_details">Spider Drop Controls</string>
    <string name="hanging_time_ms">Hanging Time (ms):</string>
    <string name="drop_spider">Drop Spider</string>
    <string name="spiderDropNameDec">This is the name of the spider dropping device.</string>
    <string name="spiderDropPinDesc">This value determines which pin is used to trigger the spider drop.</string>
    <string name="spiderDropHangTimeDesc">This value determines how long the spider will remain in the dropped position before retracting. (Default: 2000)</string>
    <string name="spiderDropStayDroppedDesc">This value determines if the spider should remain in the dropped position indefinitely, regardless of what \'Hang Time\' is set to. NOTE: The only way to retract the spider is via the app. (Default: false)</string>
    <string name="state_label">State:</string>
    <string name="err_spider_retracting">The spider is still retracting. Please Wait.</string>
    <string name="retracting_btn_text">Retracting...</string>
    <string name="retract_spider">Retract Spider</string>
    <string name="drop_pin_label">Drop Pin:</string>
    <string name="drop_motor_pin_label">Drop Motor Pin:</string>
    <string name="current_sense_pin_label">Current Sense Pin:</string>
    <string name="retract_motor_pin_label">Retract Motor Pin:</string>
    <string name="spiderDropMotorPinDesc">This value determines which pin is used to control the drop motor.</string>
    <string name="spiderDropCurrentPinDesc">This value determines which pin is used to sense the current on the motor.</string>
    <string name="spiderDropRetractPinDesc">This value determines which pin is used to control the retract motor.</string>
    <string name="drop_stop_switch_pin_label">Drop Stop Switch Pin:</string>
    <string name="spiderDropStopSwitchPinDesc">This value determines which pin is used to monitor the status of the drop motor switch.</string>
    <string name="current_pulse_delay_label">Current Pulse Delay (ms):</string>
    <string name="spiderDropCurrentPulseDelayDesc">This value controls how long it takes for the motor to start/stop.</string>
    <string name="current_limit_label">Current Limit:</string>
    <string name="spiderDropCurrentLimitDesc">This value determines how much current resistance is needed to stop the motor.</string>
    <string name="stay_dropped">Stay Dropped:</string>
    <string name="drop_motor_delay_label">Drop Motor Delay (ms):</string>
    <string name="spiderDropMoterDelayDesc">This value determines how long to wait before drop motor shuts off after receiving such a command from the arduino.</string>
    <string name="drop_anyway">Drop Anyway</string>
    <string name="show_pins">Show Pins</string>
    <string name="hide_pins">Hide Pins</string>
    <string name="spiderDropUpLimitSwitchPinDesc">This value determines which pin is used to tell if the spider is retracted all the way.</string>
    <string name="up_limit_switch_pin_label">Up Limit Switch Pin:</string>
    <string name="pin_number_label">Pin #:</string>

    <string name="firebaseEmail">_ENTER_EMAIL_ADDRESS</string>
    <string name="firebasePass">_ENTER_EMAIL_PASSWORD</string>

    <string-array name="pin_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="pin_values_all">
        <item>A0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
</resources>